// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreboardMatchup when creating a team from a server response parses and assigns data correctly 1`] = `
ScoreboardMatchup {
  "awayTeam": Team {
    "abbreviation": "GOAT",
    "awayLosses": 1,
    "awayTies": 0,
    "awayWins": 5,
    "division": Object {
      "divisionId": 0,
      "divisionName": "Division 1",
      "size": 4,
    },
    "divisionLosses": 2,
    "divisionTies": 0,
    "divisionWinningPercentage": 66.667,
    "divisionWins": 4,
    "firstName": "The Boston",
    "homeLosses": 3,
    "homeTies": 0,
    "homeWins": 4,
    "lastName": "TE Party",
    "leagueId": undefined,
    "logoURL": "http://assets.nydailynews.com/polopoly_fs/1.1443336.1378094427!/img/httpImage/image.jpg_gen/derivatives/article_750/sport-nfl-football.jpg",
    "losses": 4,
    "pointsAgainst": 1131.4,
    "pointsFor": 1305.78,
    "seasonId": undefined,
    "streakLength": 1,
    "streakType": "W",
    "teamId": 1,
    "ties": 0,
    "waiverRank": 6,
    "winningPercentage": 69.231,
    "wins": 9,
  },
  "awayTeamScore": 103.84,
  "homeTeam": Team {
    "abbreviation": "GRON",
    "awayLosses": 2,
    "awayTies": 0,
    "awayWins": 4,
    "division": Object {
      "divisionId": 1,
      "divisionName": "Division 2",
      "size": 4,
    },
    "divisionLosses": 4,
    "divisionTies": 0,
    "divisionWinningPercentage": 33.333,
    "divisionWins": 2,
    "firstName": "Prestige",
    "homeLosses": 6,
    "homeTies": 0,
    "homeWins": 1,
    "lastName": "Worldwide",
    "leagueId": undefined,
    "logoURL": "http://3219a2.medialib.glogster.com/media/f8/f81cfe4e18dba8da78f1e654f311d7852eedf937770ef0670f656835288409ca/prestige-png.png",
    "losses": 8,
    "pointsAgainst": 1232.94,
    "pointsFor": 1062.82,
    "seasonId": undefined,
    "streakLength": 1,
    "streakType": "L",
    "teamId": 2,
    "ties": 0,
    "waiverRank": 5,
    "winningPercentage": 38.462,
    "wins": 5,
  },
  "homeTeamScore": 56.64,
  "isByeWeek": false,
  "leagueId": undefined,
  "seasonId": undefined,
  "winner": Team {
    "abbreviation": "GOAT",
    "awayLosses": 1,
    "awayTies": 0,
    "awayWins": 5,
    "division": Object {
      "divisionId": 0,
      "divisionName": "Division 1",
      "size": 4,
    },
    "divisionLosses": 2,
    "divisionTies": 0,
    "divisionWinningPercentage": 66.667,
    "divisionWins": 4,
    "firstName": "The Boston",
    "homeLosses": 3,
    "homeTies": 0,
    "homeWins": 4,
    "lastName": "TE Party",
    "leagueId": undefined,
    "logoURL": "http://assets.nydailynews.com/polopoly_fs/1.1443336.1378094427!/img/httpImage/image.jpg_gen/derivatives/article_750/sport-nfl-football.jpg",
    "losses": 4,
    "pointsAgainst": 1131.4,
    "pointsFor": 1305.78,
    "seasonId": undefined,
    "streakLength": 1,
    "streakType": "W",
    "teamId": 1,
    "ties": 0,
    "waiverRank": 6,
    "winningPercentage": 69.231,
    "wins": 9,
  },
}
`;

exports[`ScoreboardMatchup when creating a team locally parses and assigns data correctly 1`] = `
ScoreboardMatchup {
  "awayTeam": Team {
    "abbreviation": "GOAT",
    "awayLosses": 1,
    "awayTies": 0,
    "awayWins": 5,
    "division": Object {
      "divisionId": 0,
      "divisionName": "Division 1",
      "size": 4,
    },
    "divisionLosses": 2,
    "divisionTies": 0,
    "divisionWinningPercentage": 0.66667,
    "divisionWins": 4,
    "firstName": "The Boston",
    "homeLosses": 3,
    "homeTies": 0,
    "homeWins": 4,
    "lastName": "TE Party",
    "leagueId": undefined,
    "logoURL": "http://assets.nydailynews.com/polopoly_fs/1.1443336.1378094427!/img/httpImage/image.jpg_gen/derivatives/article_750/sport-nfl-football.jpg",
    "losses": 4,
    "pointsAgainst": 1131.4,
    "pointsFor": 1305.78,
    "seasonId": undefined,
    "streakLength": 1,
    "streakType": "W",
    "teamId": 1,
    "ties": 0,
    "waiverRank": 6,
    "winningPercentage": 0.69231,
    "wins": 9,
  },
  "awayTeamScore": 103.84,
  "homeTeam": Team {
    "abbreviation": "GRON",
    "awayLosses": 2,
    "awayTies": 0,
    "awayWins": 4,
    "division": Object {
      "divisionId": 1,
      "divisionName": "Division 2",
      "size": 4,
    },
    "divisionLosses": 4,
    "divisionTies": 0,
    "divisionWinningPercentage": 0.33333,
    "divisionWins": 2,
    "firstName": "Prestige",
    "homeLosses": 6,
    "homeTies": 0,
    "homeWins": 1,
    "lastName": "Worldwide",
    "leagueId": undefined,
    "logoURL": "http://3219a2.medialib.glogster.com/media/f8/f81cfe4e18dba8da78f1e654f311d7852eedf937770ef0670f656835288409ca/prestige-png.png",
    "losses": 8,
    "pointsAgainst": 1232.94,
    "pointsFor": 1062.82,
    "seasonId": undefined,
    "streakLength": 1,
    "streakType": "L",
    "teamId": 2,
    "ties": 0,
    "waiverRank": 5,
    "winningPercentage": 0.38462,
    "wins": 5,
  },
  "homeTeamScore": 56.64,
  "isByeWeek": false,
  "leagueId": undefined,
  "seasonId": undefined,
  "winner": Team {
    "abbreviation": "GOAT",
    "awayLosses": 1,
    "awayTies": 0,
    "awayWins": 5,
    "division": Object {
      "divisionId": 0,
      "divisionName": "Division 1",
      "size": 4,
    },
    "divisionLosses": 2,
    "divisionTies": 0,
    "divisionWinningPercentage": 0.66667,
    "divisionWins": 4,
    "firstName": "The Boston",
    "homeLosses": 3,
    "homeTies": 0,
    "homeWins": 4,
    "lastName": "TE Party",
    "leagueId": undefined,
    "logoURL": "http://assets.nydailynews.com/polopoly_fs/1.1443336.1378094427!/img/httpImage/image.jpg_gen/derivatives/article_750/sport-nfl-football.jpg",
    "losses": 4,
    "pointsAgainst": 1131.4,
    "pointsFor": 1305.78,
    "seasonId": undefined,
    "streakLength": 1,
    "streakType": "W",
    "teamId": 1,
    "ties": 0,
    "waiverRank": 6,
    "winningPercentage": 0.69231,
    "wins": 9,
  },
}
`;
